# TNN

./: .clang-format  .clangd  .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO  add_ppl_tokens.patch  build.sh  build_ucx_pingpong.sh  docker-compose.yml  docker_start.sh  make_1pct_openwebtext.py  patch_roce_env.py  requirements.txt  test_config.cpp  torch_pipeline_parallel_1f1b_full_fixed.py
benchmarks/: CMakeLists.txt  READEME.md  attention_benchmark.cpp  batchnorm_benchmark.cpp  communicator_benchmark.cpp  compression_benchmark.cpp  conv2d_benchmark.cpp  copy_benchmark.cpp  dense_benchmark.cpp  gemm_benchmark.cpp  grad_clear_benchmark.cpp  pipeline_benchmark.cpp  roce_bench.cpp  roce_communicator_benchmark.cpp  serialization_benchmark.cpp  tcp_communicator_benchmark.cpp  tensor_ops_benchmark.cpp
cmake/: ArchCheck.cmake  CompilerFlags.cmake  DefaultTargetConfig.cmake  Dependencies.cmake  ExecutableFunctions.cmake  FindCUDA.cmake  FindDNNL.cmake  FindMKL.cmake  FindNASM.cmake  FindOpenMP.cmake  FindTBB.cmake  LinkCUDA.cmake  (+5 more)
src/: CMakeLists.txt  plot_cpu_range.py  tnn_lib.cpp
src/common/: config.cpp
src/cuda/: error_handler.cu  helpers.cu  tensor_kernels.cu
src/cuda/cudnn/: common.cu
src/data_augmentation/: augmentation.cpp
src/data_loading/: data_loading.cpp  stb_image_impl.cpp
src/data_loading/legacy/: data_loading.cpp
src/device/: device.cpp  device_manager.cpp
src/device/contexts/: cpu_context.cpp  cuda_context.cpp
src/distributed/: distributed.cpp
src/logging/: logger.cpp
src/math/cpu/: dgemm.cpp  math.cpp  sgemm.cpp
src/math/cuda/: cudnn_gemm.cu  gemm.cu
src/matrix/: matrix.cpp
src/nn/: csv_logger.cpp  example_models.cpp  io_node.cpp  layer.cpp  nn.cpp  node.cpp  op_node.cpp  sequential.cpp  siso_layer.cpp  train.cpp
src/nn/accuracy_impl/cpu/: accuracy.cpp
src/nn/accuracy_impl/cuda/: accuracy.cu
src/nn/activations_impl/: elu.cpp  gelu.cpp  leaky_relu.cpp  linear.cpp  relu.cpp  sigmoid.cpp  tanh.cpp
src/nn/activations_impl/cpu/: elu_kernels.cpp  gelu_kernels.cpp  leaky_relu_kernels.cpp  relu_kernels.cpp  sigmoid_kernels.cpp  softmax_kernels.cpp  tanh_kernels.cpp
src/nn/activations_impl/cuda/: elu_kernels.cu  gelu_kernels.cu  leaky_relu_kernels.cu  relu_kernels.cu  sigmoid_kernels.cu  softmax_kernels.cu  tanh_kernels.cu
src/nn/blocks_impl/: attention_block.cpp  cudnn_attention_ops.cu  flash_attention_block.cpp  msequential.cpp  residual_block.cpp  sequential.cpp
src/nn/blocks_impl/cpu/: causal_mask.cpp  permute_heads.cpp  softmax.cpp
src/nn/blocks_impl/cuda/: causal_mask.cu  cudnn_flash_attention_ops.cu  permute_heads.cu  softmax.cu
src/nn/layers_impl/: activation_layer.cpp  avgpool2d_layer.cpp  batchnorm_layer.cpp  class_token_layer.cpp  conv2d_layer.cpp  dense_layer.cpp  dropout_layer.cpp  elu_layer.cpp  embedding_layer.cpp  flatten_layer.cpp  gelu_layer.cpp  groupnorm_layer.cpp  identity_layer.cpp  layer_norm_layer.cpp  leaky_relu_layer.cpp  legacy_avgpool2d_layer.cpp  legacy_batchnorm_layer.cpp  legacy_conv2d_layer.cpp  legacy_dense_layer.cpp  legacy_maxpool2d_layer.cpp  linear_layer.cpp  maxpool2d_layer.cpp  n_ary_layer.cpp  parameterized_layer.cpp  positional_embedding_layer.cpp  relu_layer.cpp  sdpa_layer.cpp  sigmoid_layer.cpp  slice_layer.cpp  tanh_layer.cpp  transpose_layer.cpp
src/nn/layers_impl/cpu/: avgpool_nchw_ops.cpp  avgpool_ops.cpp  batchnorm_nchw_ops.cpp  batchnorm_nhwc_ops.cpp  batchnorm_ops.cpp  class_token_ops.cpp  conv2d_nchw_ops.cpp  conv2d_ops.cpp  dense_ops.cpp  dnnl_batchnorm_ops.cpp  dnnl_conv2d_ops.cpp  dnnl_maxpool_ops.cpp  dropout.cpp  embedding_ops.cpp  groupnorm_ops.cpp  layer_norm_ops.cpp  maxpool_nchw_ops.cpp  maxpool_ops.cpp  n_ary_ops.cpp  relu_ops.cpp  sdpa_ops.cpp  slice_ops.cpp
src/nn/layers_impl/cuda/: avgpool_nchw_ops.cu  avgpool_ops.cu  batchnorm_nchw_ops.cu  batchnorm_ops.cu  class_token_ops.cu  conv2d_nchw_ops.cu  conv2d_ops.cu  cudnn_batchnorm_ops.cu  cudnn_conv2d_nchw_ops.cu  cudnn_conv2d_ops.cu  cudnn_layer_norm_ops.cu  dense_ops.cu  dropout.cu  embedding_ops.cu  groupnorm_ops.cu  layer_norm_ops.cu  maxpool_nchw_ops.cu  maxpool_ops.cu  n_ary_ops.cu  relu_ops.cu  sdpa_ops.cu  slice_ops.cu
src/nn/legacy/: example_models.cpp
src/nn/loss_impl/cpu/: loss_ops.cpp
src/nn/loss_impl/cuda/: loss_ops.cu
src/nn/metrics_impl/cpu/: metrics.cpp
src/nn/metrics_impl/cuda/: metrics.cu
src/nn/optimizers_impl/cpu/: adam_kernels.cpp  sgd_kernels.cpp
src/nn/optimizers_impl/cuda/: adam_kernels.cu  sgd_kernels.cu
src/ops/cpu/: dkernels.cpp  skernels.cpp
src/ops/cuda/: kernels.cu
src/partitioner/: naive_partitioner.cpp
src/pipeline/: pipeline.cpp
src/profiling/: profiling.cpp
src/tensor/: gpu_tensor_ops.cpp  tensor.cpp
src/tensor/cuda/: tensor_kernels.cu  tensor_ops.cpp  tensor_ops.cu
src/threading/: threading.cpp
src/type/: type.cpp
src/utils/: hardware_info.cpp  simd_dot_product.S  simd_dot_product_aligned.S  simd_dot_product_win.asm  thread_affinity.cpp  utils.cpp
src/utils/accuracy_impl/cuda/: accuracy.cu
unit_tests/: CMakeLists.txt  archiver_test.cpp  attention_block_test.cpp  avgpool_layer_test.cpp  batchnorm_layer_test.cpp  bf16_test.cpp  conv2d_layer_test.cpp  cuda_batchnorm_ops_test.cpp  cuda_conv2d_nchw_ops_test.cpp  cuda_conv2d_ops_test.cpp  cuda_dense_ops_test.cpp  cuda_kernels_test.cpp  cuda_loss_funcs_test.cpp  cuda_maxpool_ops_test.cpp  dense_layer_test.cpp  device_manager_test.cpp  fp16_test.cpp  full_attention_block_test.cpp  gpu_tensor_ops_test.cpp  gpu_tensor_test.cpp  groupnorm_layer_test.cpp  job_pool_test.cpp  layer_buffer_reuse_test.cpp  layer_device_agnosticity_test.cpp  layer_integration_test.cpp  legacy_avgpool_layer_test.cpp  legacy_batchnorm_layer_test.cpp  legacy_conv2d_layer_test.cpp  legacy_dense_layer_test.cpp  legacy_maxpool2d_layer_test.cpp  maxpool2d_layer_test.cpp  partitioner_test.cpp  residual_block_test.cpp  sequential_residual_block_test.cpp  slice_ops_test.cpp  tensor_test.cpp  tiny_imagenet_loader_test.cpp  vbuffer_serializer_test.cpp  vbuffer_test.cpp  vserializer_test.cpp
(+513 files in other folders)
